# Sharr

./: .env.example  .gitignore  AGENT.md  Dockerfile.api  Dockerfile.worker  SETUP.md  docker-compose.yml  pyproject.toml
app/: config.py  filesystem.py  library.py  main.py  peers.py  queue.py  redis_client.py  schemas.py  transfer.py  worker.py
app/routes/: filesystem.py  library.py  peers.py  remote.py  transfers.py
app/static/: index.html
tests/: conftest.py  test_all.py
wg-data/: wg0.conf.example
