[project]
name = "secure-p2p-transfer"
version = "0.1.0"
description = "Secure P2P large file transfer over WireGuard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "redis>=5.0",
    "pika>=1.3",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]
